[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
tokio = { version = "1.29.1", features = ["full", "tracing"] }
tracing-log = { version = "0.1.3", features = ["env_logger"] }
