[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive", "cargo"] }
confy = "0.5.1"
env_logger = "0.10.0"
serde = { version = "1.0.181", features = ["derive"] }
serde_derive = "1.0.181"
tokio = { version = "1.29.1", features = ["full", "tracing"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-log = { version = "0.1.3", features = ["env_logger"] }
